--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.13.5",
     "@mui/material": "^6.1.8",
     "@mui/x-data-grid": "^7.22.2",
+    "firebase": "^11.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
